--- a/work_method.ipynb
+++ b/work_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,16 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total material dredged : 2200000.0 ton\n",
-      "Volume of Sand: 1100000.0 m3\n",
-      "Average load rate: 203.704 m3/s\n"
+      "Sediment Inflow Rate: 8679.991 kg/week/m\n",
+      "Total material dredged : 1760000.0 ton\n",
+      "Volume of Sand: 880000.0 m3\n",
+      "Average load rate: 162.963 m3/s\n"
      ]
     }
    ],
@@ -48,19 +49,22 @@
     "rho_w = 1025 #kg/m3\n",
     "w = 220 #m\n",
     "l = 1000 #m\n",
-    "d = 5 #m (max allowed dredging - minimum depth for excavation)\n",
-    "mass_sand = rho_s * w * l * d #kg\n",
+    "delta_d = 4 #m (max allowed dredging - current depth)\n",
+    "d = 12 #m (Channel depth for sediment inflow)\n",
+    "mass_sand = rho_s * w * l * delta_d #kg\n",
     "vol_sand = mass_sand / rho_s #m3\n",
     "avg_load_rate = vol_sand / load_time #m3/s\n",
+    "S = 250 + 260 * d**1.4\n",
     "\n",
+    "print('Sediment Inflow Rate:', round(S,3), 'kg/week/m')\n",
     "print('Total material dredged :', round(mass_sand/1000,1) , 'ton')\n",
     "print('Volume of Sand:', round(vol_sand,5) , 'm3')\n",
-    "print('Average load rate:', round(avg_load_rate,3), 'm3/s')   "
+    "print('Average load rate:', round(avg_load_rate,3), 'm3/s')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +176,7 @@
        "2.24596942718497"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
