--- a/work_method.ipynb
+++ b/work_method.ipynb
@@ -49,7 +49,7 @@
     "rho_w = 1025 #kg/m3\n",
     "w = 220 #m\n",
     "l = 1000 #m\n",
-    "delta_d = 4 #m (max allowed dredging - current depth)\n",
+    "delta_d = 4 #m\n",
     "d = 12 #m (Channel depth for sediment inflow)\n",
     "mass_sand = rho_s * w * l * delta_d #kg\n",
     "vol_sand = mass_sand / rho_s #m3\n",
